tests/sources/invalid/classes/receiver_readonly_mutation_errors.fire
// Attempting to mutate fields through a read-only &this receiver must be a compile error.

import @firescript/std.io.println;

class Pt {
    x: int32;
    y: int32;

    fn Pt(&mut this, x: int32, y: int32) {
        this.x = x;
        this.y = y;
    }

    fn setX(&this, v: int32) -> void {
        this.x = v;  //~ ERROR FS-SEM-0001 @16
    }

    fn setY(&this, v: int32) -> void {
        this.y = v;  //~ ERROR FS-SEM-0001 @16
    }
}
